--- a/OC/Kexts/USBPorts.kext/Contents/Info.plist
+++ b/OC/Kexts/USBPorts.kext/Contents/Info.plist
@@ -5,13 +5,13 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleGetInfoString</key>
-	<string>v1.0</string>
+	<string>1.0 Copyright © 2018-2020 Headsoft. All rights reserved.</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.corpnewt.USBMap</string>
+	<string>com.Headsoft.USBPorts</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>USBMap</string>
+	<string>USBPorts</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
@@ -25,38 +25,41 @@
 		<key>Macmini8,1-XHC</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.apple.driver.AppleUSBHostMergeProperties</string>
+			<string>com.apple.driver.AppleUSBMergeNub</string>
 			<key>IOClass</key>
-			<string>AppleUSBHostMergeProperties</string>
-			<key>IOPathMatch</key>
-			<string>IOService:/AppleACPIPlatformExpert/PCI0@0/AppleACPIPCI/XHC@14/XHC@14000000</string>
+			<string>AppleUSBMergeNub</string>
+			<key>IONameMatch</key>
+			<string>XHC</string>
+			<key>IOPCIPrimaryMatch</key>
+			<string>0xa36d8086</string>
+			<key>IOProbeScore</key>
+			<integer>5000</integer>
 			<key>IOProviderClass</key>
-			<string>AppleUSBXHCIPCI</string>
+			<string>AppleIntelCNLUSBXHCI</string>
 			<key>IOProviderMergeProperties</key>
 			<dict>
-				<key>kUSBMuxEnabled</key>
-				<true/>
+				<key>kUSBSleepPortCurrentLimit</key>
+				<integer>2100</integer>
+				<key>kUSBSleepPowerSupply</key>
+				<integer>3600</integer>
+				<key>kUSBWakePortCurrentLimit</key>
+				<integer>2100</integer>
+				<key>kUSBWakePowerSupply</key>
+				<integer>5200</integer>
 				<key>port-count</key>
 				<data>
 				GAAAAA==
 				</data>
 				<key>ports</key>
 				<dict>
-					<key>HS01</key>
-					<dict>
-						<key>#port</key>
-						<data>
-						AQAAAA==
-						</data>
-						<key>UsbConnector</key>
-						<integer>3</integer>
-					</dict>
 					<key>HS02</key>
 					<dict>
 						<key>Comment</key>
 						<string>middle</string>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>0</integer>
+						<key>name</key>
+						<string>HS02</string>
 						<key>port</key>
 						<data>
 						AgAAAA==
@@ -67,7 +70,9 @@
 						<key>Comment</key>
 						<string>4-UP-LEFT</string>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>0</integer>
+						<key>name</key>
+						<string>HS03</string>
 						<key>port</key>
 						<data>
 						AwAAAA==
@@ -78,60 +83,72 @@
 						<key>Comment</key>
 						<string>4-UP-RIGHT</string>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>0</integer>
+						<key>name</key>
+						<string>HS04</string>
 						<key>port</key>
 						<data>
 						BAAAAA==
 						</data>
 					</dict>
-					<key>HS05</key>
+					<key>HS07</key>
 					<dict>
 						<key>Comment</key>
 						<string>FRONT-UP</string>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>0</integer>
+						<key>name</key>
+						<string>HS07</string>
 						<key>port</key>
 						<data>
 						BwAAAA==
 						</data>
 					</dict>
-					<key>HS06</key>
+					<key>HS08</key>
 					<dict>
 						<key>Comment</key>
 						<string>FRONT-LOW</string>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>0</integer>
+						<key>name</key>
+						<string>HS08</string>
 						<key>port</key>
 						<data>
 						CAAAAA==
 						</data>
 					</dict>
-					<key>HS07</key>
+					<key>HS09</key>
 					<dict>
 						<key>Comment</key>
 						<string>back_top_left</string>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>0</integer>
+						<key>name</key>
+						<string>HS09</string>
 						<key>port</key>
 						<data>
 						CQAAAA==
 						</data>
 					</dict>
-					<key>HS08</key>
+					<key>HS10</key>
 					<dict>
 						<key>Comment</key>
 						<string>back_top_right</string>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>0</integer>
+						<key>name</key>
+						<string>HS10</string>
 						<key>port</key>
 						<data>
 						CgAAAA==
 						</data>
 					</dict>
-					<key>HS09</key>
+					<key>HS14</key>
 					<dict>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>255</integer>
+						<key>name</key>
+						<string>HS14</string>
 						<key>port</key>
 						<data>
 						DgAAAA==
@@ -143,6 +160,8 @@
 						<string>4-UP-RIGHT-USB3</string>
 						<key>UsbConnector</key>
 						<integer>3</integer>
+						<key>name</key>
+						<string>SS01</string>
 						<key>port</key>
 						<data>
 						EQAAAA==
@@ -154,6 +173,8 @@
 						<string>4-UP-LEFT-USB3</string>
 						<key>UsbConnector</key>
 						<integer>3</integer>
+						<key>name</key>
+						<string>SS02</string>
 						<key>port</key>
 						<data>
 						EgAAAA==
@@ -165,37 +186,34 @@
 						<string>MIDDLE-USB3</string>
 						<key>UsbConnector</key>
 						<integer>3</integer>
+						<key>name</key>
+						<string>SS03</string>
 						<key>port</key>
 						<data>
 						EwAAAA==
 						</data>
 					</dict>
-					<key>SS04</key>
-					<dict>
-						<key>#port</key>
-						<data>
-						FAAAAA==
-						</data>
-						<key>UsbConnector</key>
-						<integer>3</integer>
-					</dict>
-					<key>SS05</key>
+					<key>SS07</key>
 					<dict>
 						<key>Comment</key>
 						<string>FRONT-UP-USB3</string>
 						<key>UsbConnector</key>
 						<integer>3</integer>
+						<key>name</key>
+						<string>SS07</string>
 						<key>port</key>
 						<data>
 						FwAAAA==
 						</data>
 					</dict>
-					<key>SS06</key>
+					<key>SS08</key>
 					<dict>
 						<key>Comment</key>
 						<string>UP-LOW-USB3</string>
 						<key>UsbConnector</key>
 						<integer>3</integer>
+						<key>name</key>
+						<string>SS08</string>
 						<key>port</key>
 						<data>
 						GAAAAA==
