--- a/OC/Kexts/USBMap.kext/Contents/Info.plist
+++ b/OC/Kexts/USBMap.kext/Contents/Info.plist
@@ -28,8 +28,14 @@
 			<string>com.apple.driver.AppleUSBHostMergeProperties</string>
 			<key>IOClass</key>
 			<string>AppleUSBHostMergeProperties</string>
-			<key>IOPathMatch</key>
-			<string>IOService:/AppleACPIPlatformExpert/PCI0@0/AppleACPIPCI/XHC@14/XHC@14000000</string>
+			<key>IOParentMatch</key>
+			<dict>
+				<key>IOPropertyMatch</key>
+				<dict>
+					<key>pcidebug</key>
+					<string>0:20:0</string>
+				</dict>
+			</dict>
 			<key>IOProviderClass</key>
 			<string>AppleUSBXHCIPCI</string>
 			<key>IOProviderMergeProperties</key>
@@ -44,30 +50,26 @@
 				<dict>
 					<key>HS01</key>
 					<dict>
-						<key>#port</key>
+						<key>UsbConnector</key>
+						<integer>9</integer>
+						<key>port</key>
 						<data>
 						AQAAAA==
+						</data>
+					</dict>
+					<key>HS02</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						AgAAAA==
 						</data>
 						<key>UsbConnector</key>
 						<integer>3</integer>
 					</dict>
-					<key>HS02</key>
-					<dict>
-						<key>Comment</key>
-						<string>middle</string>
-						<key>UsbConnector</key>
-						<integer>2</integer>
-						<key>port</key>
-						<data>
-						AgAAAA==
-						</data>
-					</dict>
 					<key>HS03</key>
 					<dict>
-						<key>Comment</key>
-						<string>4-UP-LEFT</string>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>0</integer>
 						<key>port</key>
 						<data>
 						AwAAAA==
@@ -75,10 +77,8 @@
 					</dict>
 					<key>HS04</key>
 					<dict>
-						<key>Comment</key>
-						<string>4-UP-RIGHT</string>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>0</integer>
 						<key>port</key>
 						<data>
 						BAAAAA==
@@ -86,52 +86,80 @@
 					</dict>
 					<key>HS05</key>
 					<dict>
-						<key>Comment</key>
-						<string>FRONT-UP</string>
+						<key>#port</key>
+						<data>
+						BQAAAA==
+						</data>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>3</integer>
+					</dict>
+					<key>HS06</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						BgAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+					</dict>
+					<key>HS07</key>
+					<dict>
+						<key>UsbConnector</key>
+						<integer>0</integer>
 						<key>port</key>
 						<data>
 						BwAAAA==
 						</data>
 					</dict>
-					<key>HS06</key>
+					<key>HS08</key>
 					<dict>
-						<key>Comment</key>
-						<string>FRONT-LOW</string>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>0</integer>
 						<key>port</key>
 						<data>
 						CAAAAA==
 						</data>
 					</dict>
-					<key>HS07</key>
+					<key>HS09</key>
 					<dict>
-						<key>Comment</key>
-						<string>back_top_left</string>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>0</integer>
 						<key>port</key>
 						<data>
 						CQAAAA==
 						</data>
 					</dict>
-					<key>HS08</key>
+					<key>HS10</key>
 					<dict>
-						<key>Comment</key>
-						<string>back_top_right</string>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>0</integer>
 						<key>port</key>
 						<data>
 						CgAAAA==
 						</data>
 					</dict>
-					<key>HS09</key>
+					<key>HS11</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						CwAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+					</dict>
+					<key>HS12</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						DAAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+					</dict>
+					<key>HS13</key>
 					<dict>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>255</integer>
 						<key>port</key>
 						<data>
 						DgAAAA==
@@ -139,8 +167,6 @@
 					</dict>
 					<key>SS01</key>
 					<dict>
-						<key>Comment</key>
-						<string>4-UP-RIGHT-USB3</string>
 						<key>UsbConnector</key>
 						<integer>3</integer>
 						<key>port</key>
@@ -150,8 +176,6 @@
 					</dict>
 					<key>SS02</key>
 					<dict>
-						<key>Comment</key>
-						<string>4-UP-LEFT-USB3</string>
 						<key>UsbConnector</key>
 						<integer>3</integer>
 						<key>port</key>
@@ -161,8 +185,6 @@
 					</dict>
 					<key>SS03</key>
 					<dict>
-						<key>Comment</key>
-						<string>MIDDLE-USB3</string>
 						<key>UsbConnector</key>
 						<integer>3</integer>
 						<key>port</key>
@@ -172,17 +194,24 @@
 					</dict>
 					<key>SS04</key>
 					<dict>
-						<key>#port</key>
-						<data>
-						FAAAAA==
-						</data>
 						<key>UsbConnector</key>
 						<integer>3</integer>
+						<key>port</key>
+						<data>
+						FQAAAA==
+						</data>
 					</dict>
 					<key>SS05</key>
 					<dict>
-						<key>Comment</key>
-						<string>FRONT-UP-USB3</string>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+						<key>port</key>
+						<data>
+						FgAAAA==
+						</data>
+					</dict>
+					<key>SS06</key>
+					<dict>
 						<key>UsbConnector</key>
 						<integer>3</integer>
 						<key>port</key>
@@ -190,10 +219,8 @@
 						FwAAAA==
 						</data>
 					</dict>
-					<key>SS06</key>
+					<key>SS07</key>
 					<dict>
-						<key>Comment</key>
-						<string>UP-LOW-USB3</string>
 						<key>UsbConnector</key>
 						<integer>3</integer>
 						<key>port</key>
